Fixed UI gap in banner

--- a/src/css/l-screen.css
+++ b/src/css/l-screen.css
@@ -160,12 +160,12 @@ button img {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: calc(var(--banner-height) - var(--p-default) - var(--b-height));
+    height: calc(var(--banner-height) - var(--p-default) - 2.2rem);
 }
 
 #banner-container img {
     height: 32rem;
-
+    animation: fadeIn 1s ease-in;
 }
 
 #banner-image {
@@ -350,5 +350,14 @@ nav div {
 }
 
 .img-btn img{
-    height: 2rem;
+    height: 2.2rem;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
